--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Nicknames:</strong> <span>Ara, Belle, Arabelly</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>June 27 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Qui-anan, San Joaquin, Iloilo</span></ li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Lorem ipsum, Adipiscing elit</span></ li>
               </ul>
             </div>
             <div class="col-lg-6">
