third commit.html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://www.facebook.com/ara.belle.921/" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/avitchsandesu/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -93,8 +93,8 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Course:</strong> <span>BS in Information Technology</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Network and Information Security</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arabelle.esconebra@wvsu.edu.ph</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+63) 956-392-7532</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>example@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+01) 234-567-8910</span></li>
               </ul>
             </div>
           </div>
@@ -209,8 +209,6 @@
                 Furthermore, I expect to gain more knowledge and wisdom over time. <br>
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <h3>Esconebra, Arabelle R.</h3>
-              <h4>January, 2024</h4>
             </div>
           </div><!-- End Future item -->
 
@@ -368,7 +366,7 @@
         <div class="col-lg-6">
           <h3 class="education-title">College</h3>
           <div class="education-item pb-0">
-            <h4>West Visayas State University</h4>
+            <h4>Lorem Ipsum Dolor Sit Amet</h4>
             <h5>2020 - Present</h5>
             <p><em>Bachelor of Science in Information Technology</em></p>
             <p><em>Major in Network and Information Security</em></p>
@@ -383,7 +381,7 @@
 
           <h3 class="education-title">High School</h3>
           <div class="education-item">
-            <h4>Don Felix Serra National High School</h4>
+            <h4>Excepteur Sint Occaecat</h4>
             <h5>2017 - 2020</h5>
             <p><em>Senior High School</em></p>
             <p>Science, Technology, Engineering and Mathematics Strand</p>
@@ -397,7 +395,7 @@
             <h4>Don Felix Serra National High School</h4>
             <h5>2014 - 2017</h5>
             <p><em>Junior High School</em></p>
-            <p>Science, Technology, and Engineering</p>
+            <p>Excepteur Sint Occaecat</p>
             <p>
               <ul>
                 <li>Finished with Honors</li>
@@ -408,7 +406,7 @@
         <div class="col-lg-6">
           <h3 class="education-title">Elementary</h3>
           <div class="education-item">
-            <h4>San Joaquin Central Elementary School</h4>
+            <h4> Duis Aute Irure</h4>
             <h5>2010 - 2014</h5>
             <p>
             <ul>
@@ -417,7 +415,7 @@
             </p>
           </div>
           <div class="education-item">
-            <h4>Saint Mary's Integrated School</h4>
+            <h4>Ut Enim Ad Minima Veniam</h4>
             <h5>2008 - 2010</h5>
             <p>
               <ul>
@@ -428,7 +426,7 @@
           
           <h3 class="education-title">Preschool</h3>
           <div class="education-item">
-            <h4>Colegio de las Hijas de Jesus</h4>
+            <h4>Quis Autem</h4>
             <h5>2005 - 2008</h5>
             <p>
             <ul>
@@ -613,7 +611,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Qui-anan, San Joaquin, Iloilo</p>
+            <p>Lorem ipsum dolor sit amet, Consectetur adipiscing elit</p>
           </div>
         </div>
 
@@ -622,8 +620,8 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.facebook.com/ara.belle.921/" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/avitchsandesu/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href=""><i class="bi bi-facebook"></i></a>
+              <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -632,14 +630,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>arabelle.esconebra@wvsu.edu.ph</p>
+            <p>example@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>(+63) 956-392-7532</p>
+            <p>(+01) 234-567-8910</p>
           </div>
         </div>
       </div>
