fourth commit.html

--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
               </p>
           </div>
           <div class="education-item">
-            <h4>Don Felix Serra National High School</h4>
+            <h4>Excepteur Sint Occaecat</h4>
             <h5>2014 - 2017</h5>
             <p><em>Junior High School</em></p>
-            <p>Excepteur Sint Occaecat</p>
+            <p>Science, Technology and Engineering</p>
             <p>
               <ul>
                 <li>Finished with Honors</li>
