--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
       <img src="assets/Pictures/Maple Icon.png" class="img-fluid" alt="">
       <h1><a href="index.html">Arabelle R. Esconebra</a></h1>
-      <h2>I'm a humble <span>IT student</span> from Qui-anan, San Joaquin</h2>
+      <h2>I'm a hardworking <span>IT graduate</span> interested in animation</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -76,25 +76,24 @@
           <img src="assets/Pictures/Ara.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>4th Year BSIT Student</h3>
+          <h3>Hello! I'm Arabelle!</h3>
           <p class="fst-italic">
-            "I don't know what I am doing, but at least I'm doing something."
+            "Through the dark, it does get darker, and through the darkness, it becomes pitch black, but do not fret, do not worry.
+             Do not be afraid, because when things are darkest, your eyes adjust." - Gavis Bettel
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Nicknames:</strong> <span>Ara, Belle, Arabelly</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>June 27 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Lorem ipsum, Adipiscing elit</span></ li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Course:</strong> <span>BS in Information Technology</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Network and Information Security</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>example@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+01) 234-567-8910</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Brgy. Qui-anan, San Joaquin, Iloilo</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arabelle.esconebra@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+63) 956-392-7532</span></li>
               </ul>
             </div>
           </div>
@@ -366,22 +365,21 @@
         <div class="col-lg-6">
           <h3 class="education-title">College</h3>
           <div class="education-item pb-0">
-            <h4>Lorem Ipsum Dolor Sit Amet</h4>
-            <h5>2020 - Present</h5>
+            <h4>West Visayas State University</h4>
+            <h5>2020 - 2024</h5>
             <p><em>Bachelor of Science in Information Technology</em></p>
             <p><em>Major in Network and Information Security</em></p>
             <p>
             <ul>
-              <li>Silver Medalist: 2022 - 2023</li>
-              <li>Silver Medalist: 2021 - 2022</li>
-              <li>Silver Medalist: 2020 - 2021</li>
+              <li>Silver Medalist: 2020 - 2023</li>
+              <li>Magna Cum Laude: 2023 - 2024</li>
             </ul>
             </p>
           </div>
 
           <h3 class="education-title">High School</h3>
           <div class="education-item">
-            <h4>Excepteur Sint Occaecat</h4>
+            <h4>Don Felix Serra National High School</h4>
             <h5>2017 - 2020</h5>
             <p><em>Senior High School</em></p>
             <p>Science, Technology, Engineering and Mathematics Strand</p>
@@ -392,7 +390,7 @@
               </p>
           </div>
           <div class="education-item">
-            <h4>Excepteur Sint Occaecat</h4>
+            <h4>Don Felix Serra National High School</h4>
             <h5>2014 - 2017</h5>
             <p><em>Junior High School</em></p>
             <p>Science, Technology and Engineering</p>
@@ -406,7 +404,7 @@
         <div class="col-lg-6">
           <h3 class="education-title">Elementary</h3>
           <div class="education-item">
-            <h4> Duis Aute Irure</h4>
+            <h4> San Joaquin Central Elementary School</h4>
             <h5>2010 - 2014</h5>
             <p>
             <ul>
@@ -415,7 +413,7 @@
             </p>
           </div>
           <div class="education-item">
-            <h4>Ut Enim Ad Minima Veniam</h4>
+            <h4>Saint Mary's Integrated School</h4>
             <h5>2008 - 2010</h5>
             <p>
               <ul>
@@ -426,7 +424,7 @@
           
           <h3 class="education-title">Preschool</h3>
           <div class="education-item">
-            <h4>Quis Autem</h4>
+            <h4>Colegio de las Hijas de Jesus</h4>
             <h5>2005 - 2008</h5>
             <p>
             <ul>
@@ -463,7 +461,7 @@
               <p>
                 <ul>
                 <li>Made with Adobe Illustrator</li>
-                <li>A maximalist project for a subject</li>
+                <li>A maximalist project for a college subject</li>
                </ul>
               </p>
             </div>
@@ -489,11 +487,11 @@
           <div class="works-wrap">
             <img src="assets/Pictures/Works/Maple-01.jpg" class="img-fluid" alt="">
             <div class="works-info">
-              <h4>Wanderer's Crest</h4>
+              <h4>A Wanderer's Crest</h4>
               <p>
                 <ul>
                 <li>Made with Adobe Illustrator</li>
-                <li>A minimalist project for a subject, inspired by my favorite character</li>
+                <li>A minimalist project for a subject, inspired by my favorite character in Genshin Impact</li>
                </ul>
               </p>
             </div>
@@ -523,7 +521,7 @@
               <p>
                 <ul>
                 <li>Made with ibisPaint X</li>
-                <li>The Vtuber I always watched played the game, "It Takes Two"</li>
+                <li>A fanart for a Vtuber after they played the game, "It Takes Two"</li>
                </ul>
               </p>
             </div>
@@ -611,7 +609,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Lorem ipsum dolor sit amet, Consectetur adipiscing elit</p>
+            <p>Brgy. Qui-anan, San Joaquin, Iloilo</p>
           </div>
         </div>
 
@@ -620,8 +618,8 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.facebook.com/ara.belle.921/"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/avitchsandesu/" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -630,14 +628,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>example@gmail.com</p>
+            <p>arabelle.esconebra@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>(+01) 234-567-8910</p>
+            <p>(+63) 956-392-7532</p>
           </div>
         </div>
       </div>
