--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Me</title>
+  <title>Arabelle's Profile</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -52,8 +52,8 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/ara.belle.921/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/avitchsandesu/" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
@@ -498,21 +498,6 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-web">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/IMG_20230409_005622.png" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>Fanart of Another Vtuber</h4>
-              <p>
-                <ul>
-                <li>Made with ibisPaint X</li>
-                <li>A fanart of an old Vtuber dressed as a shriveled prune</li>
-               </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
         <div class="col-lg-4 col-md-6 works-item filter-card">
           <div class="works-wrap">
             <img src="assets/Pictures/Works/IMG_20230408_175312.png" class="img-fluid" alt="">
@@ -536,28 +521,28 @@
               <p>
                 <ul>
                 <li>Made with ibisPaint X</li>
-                <li>My Current Facebook Profile Pic</li>
+                <li>A digital art of a Tuxedo cat</li>
                </ul>
               </p>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-web">
+        <div class="col-lg-4 col-md-6 works-item filter-card">
           <div class="works-wrap">
-            <img src="assets/Pictures/Works/9l8rqz.jpg" class="img-fluid" alt="">
+            <img src="assets/Pictures/Works/Untitled83_20240826200051.png" class="img-fluid" alt="">
             <div class="works-info">
-              <h4>Black Cat</h4>
+              <h4>A Hakkito being Sad</h4>
               <p>
                 <ul>
                 <li>Made with ibisPaint X</li>
-                <li>I made my own profile picture</li>
+                <li>A mascot fanart of a Vtuber</li>
                </ul>
               </p>
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 works-item filter-card">
           <div class="works-wrap">
             <img src="assets/Pictures/Works/Untitled47_20230327231942.png" class="img-fluid" alt="">
@@ -566,7 +551,7 @@
               <p>
                 <ul>
                 <li>Made with ibisPaint X</li>
-                <li>A mascot fanart for a Vtuber</li>
+                <li>A mascot fanart for a Vtuber as Angry Birds</li>
                </ul>
               </p>
             </div>
@@ -581,7 +566,7 @@
               <p>
                 <ul>
                 <li>Made with Adobe Illustrator</li>
-                <li>I was eating eggs for meals for 3 straight days and I was inspired</li>
+                <li>An art about an Egg Man going for an adventure</li>
                </ul>
               </p>
             </div>
