Updated Profile Works

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#facts">Fun Facts</a></li>
           <li><a class="nav-link" href="#education">Education</a></li>
-          <li><a class="nav-link" href="#works">Works</a></li>
+          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -441,143 +441,127 @@
   </section>
   <!-- End Education Section -->
 
-  <!-- ======= Works Section ======= -->
-  <section id="works" class="works">
-    <div class="container">
+<!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio">
+  <div class="container">
 
-      <div class="section-title">
-        <h2>Personal Projects</h2>
-        <p>My Works</p>
+    <div class="section-title">
+      <h2>Portfolio</h2>
+      <p>My Works</p>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12 d-flex justify-content-center">
+        <ul id="portfolio-flters">
+          <li data-filter="*" class="filter-active">All</li>
+          <li data-filter=".filter-app">Digital Art</li>
+          <li data-filter=".filter-web">Animated Video</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row portfolio-container">
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Maple-01.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>A Wanderer's Crest</h4>
+            <p>Made with Adobe Illustrator</p>
+          </div>
+        </div>
       </div>
 
-
-      <div class="row works-container">
-
-        <div class="col-lg-4 col-md-6 works-item filter-app">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Maple tree-01.jpg" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>Autumn Night</h4>
-              <p>
-                <ul>
-                <li>Made with Adobe Illustrator</li>
-                <li>A maximalist project for a college subject</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Maple tree-01.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Autumn Night</h4>
+            <p>Made with Adobe Illustrator</p>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-app">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Editorial Poster.jpg" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>The Hourglass</h4>
-              <p>
-                <ul>
-                <li>Made with Adobe Illustrator</li>
-                <li>An editorial poster to raise awareness for the environment</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Editorial Poster.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>The Hourglass</h4>
+            <p>Made with Adobe Illustrator</p>
           </div>
         </div>
-        
-        <div class="col-lg-4 col-md-6 works-item filter-app">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Maple-01.jpg" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>A Wanderer's Crest</h4>
-              <p>
-                <ul>
-                <li>Made with Adobe Illustrator</li>
-                <li>A minimalist project for a subject, inspired by my favorite character in Genshin Impact</li>
-               </ul>
-              </p>
-            </div>
-          </div>
-        </div>
+      </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-card">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/IMG_20230408_175312.png" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>Fanart for Favorite Vtuber</h4>
-              <p>
-                <ul>
-                <li>Made with ibisPaint X</li>
-                <li>A fanart for a Vtuber after they played the game, "It Takes Two"</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Untitled64_20230912185750.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Tuxedo Cat</h4>
+            <p>Made with IbisPaint X</p>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-card">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Untitled64_20230912185750.png" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>A Distinguished Gentleman</h4>
-              <p>
-                <ul>
-                <li>Made with ibisPaint X</li>
-                <li>A digital art of a Tuxedo cat</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/IMG_20230408_175312.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>HakkaLibro</h4>
+            <p>Made with IbisPaint X</p>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-card">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Untitled83_20240826200051.png" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>A Hakkito being Sad</h4>
-              <p>
-                <ul>
-                <li>Made with ibisPaint X</li>
-                <li>A mascot fanart of a Vtuber</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Untitled83_20240826200051.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>A Hakkito</h4>
+            <p>Made with IbisPaint X</p>
           </div>
         </div>
+      </div>
 
-        <div class="col-lg-4 col-md-6 works-item filter-card">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Untitled47_20230327231942.png" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>Hakkitos</h4>
-              <p>
-                <ul>
-                <li>Made with ibisPaint X</li>
-                <li>A mascot fanart for a Vtuber as Angry Birds</li>
-               </ul>
-              </p>
-            </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Untitled47_20230327231942.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Angry Hakkitos</h4>
+            <p>Made with IbisPaint X</p>
           </div>
         </div>
-        
-        <div class="col-lg-4 col-md-6 works-item filter-app">
-          <div class="works-wrap">
-            <img src="assets/Pictures/Works/Egg banner-01.jpg" class="img-fluid" alt="">
-            <div class="works-info">
-              <h4>Adventures of Egg</h4>
-              <p>
-                <ul>
-                <li>Made with Adobe Illustrator</li>
-                <li>An art about an Egg Man going for an adventure</li>
-               </ul>
-              </p>
-            </div>
-          </div>
-        </div>
+      </div>
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/Pictures/Works/Egg banner-01.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Egg Adventure</h4>
+            <p>Made with Adobe Illustrator</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Card 3</h4>
+            <p>Card</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <video width="405" controls>
+            <source src="assets/Video/How to use Social Media Responsibly.mp4" type="video/mp4">
+          </video>
       </div>
 
     </div>
-  </section>
-  <!-- End Works Section -->
+
+  </div>
+</section><!-- End Portfolio Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
